Add chathub and angular to client project

--- a/SpaceInvaders.Client/index.html
+++ b/SpaceInvaders.Client/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="src/js/connection.js"></script>
     <script type="text/javascript" src="src/js/hubs/diagHub.js"></script>
     <script type="text/javascript" src="src/js/hubs/gamePlayHub.js"></script>
+    <script type="text/javascript" src="src/js/hubs/chatHub.js"></script>
     <script type="text/javascript" src="src/js/hub.js"></script>
     <script type="text/javascript" src="src/js/main.js"></script>
 </head>
