Fixed signalr connection, add userlist

--- a/SpaceInvaders.Website/index.html
+++ b/SpaceInvaders.Website/index.html
@@ -9,11 +9,13 @@
     <link rel="stylesheet" href="src/css/site.css">
     <link rel="stylesheet" href="src/features/account/login.css">
     <link rel="stylesheet" href="src/features/chat/chat.css">
+    <link rel="stylesheet" href="src/features/userlist/userlist.css">
 
     <script type="text/javascript" src="packages/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="packages/signalr/jquery.signalR.js"></script>
     <script type="text/javascript" src="packages/angular/angular.js"></script>
     <script type="text/javascript" src="packages/angular-route/angular-route.js"></script>
+    <script type="text/javascript" src="src/js/eventmanager.js"></script>
     <script type="text/javascript" src="src/js/connection.js"></script>
     <script type="text/javascript" src="src/js/hubs/diagHub.js"></script>
     <script type="text/javascript" src="src/js/hubs/gameHub.js"></script>
@@ -30,6 +32,7 @@
     <script type="text/javascript" src="src/features/dashboard/dashboardCtrl.js"></script>
     <script type="text/javascript" src="src/features/chat/chatService.js"></script>
     <script type="text/javascript" src="src/features/chat/chatCtrl.js"></script>
+    <script type="text/javascript" src="src/features/userlist/userlistCtrl.js"></script>
 </head>
 <body ng-app="SpaceInvaders" ng-controller="MainCtrl">
 <!--ContentView-->
