--- a/SpaceInvaders.Website/src/features/dashboard/dashboard.html
+++ b/SpaceInvaders.Website/src/features/dashboard/dashboard.html
@@ -1,3 +1,6 @@
-<div ng-include src="'src/features/chat/chat.tmpl.html'">
+<div ng-include src="'src/features/userlist/userlist.html'">
+
+</div>
+<div ng-include src="'src/features/chat/chat.html'">
 
 </div>
