Modify hubs, pages

--- a/SpaceInvaders.Website/index.html
+++ b/SpaceInvaders.Website/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="src/features/account/login.css">
     <link rel="stylesheet" href="src/features/chat/chat.css">
     <link rel="stylesheet" href="src/features/userlist/userlist.css">
+    <link rel="stylesheet" href="src/features/dashboard/dashboard.css">
 
     <script type="text/javascript" src="packages/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="packages/signalr/jquery.signalR.js"></script>
