--- a/SpaceInvaders.Website/src/features/dashboard/dashboard.html
+++ b/SpaceInvaders.Website/src/features/dashboard/dashboard.html
@@ -1,6 +1,6 @@
-<div ng-include src="'src/features/userlist/userlist.html'">
-
-</div>
-<div ng-include src="'src/features/chat/chat.html'">
-
+<div class="left-bar">
+    <div class="users-widget" ng-include src="'src/features/userlist/userlist.html'">
+    </div>
+    <div class="chat-widget" ng-include src="'src/features/chat/chat.html'">
+    </div>
 </div>
