--- a/SpaceInvaders.Website/src/features/userlist/userlist.html
+++ b/SpaceInvaders.Website/src/features/userlist/userlist.html
@@ -3,7 +3,7 @@
         Users
     </div>
     <div class="users-wrapper">
-        <div class="user space s bottom" ng-repeat="user in users">
+        <div class="user space s bottom font-s" ng-repeat="user in users">
             {{user.UserName}}
         </div>
     </div>
