Added CanvasRender package, created game logic layer

--- a/SpaceInvaders.Website/src/features/dashboard/dashboard.html
+++ b/SpaceInvaders.Website/src/features/dashboard/dashboard.html
@@ -1,6 +1,8 @@
-<div class="left-bar">
-    <div class="users-widget" ng-include src="'src/features/userlist/userlist.html'">
+<div class="left-bar" ng-controller="GameCtrl">
+    <!--<div class="users-widget" ng-include src="'src/features/userlist/userlist.html'">
     </div>
     <div class="chat-widget" ng-include src="'src/features/chat/chat.html'">
     </div>
+-->
+    <div id="viewport"></div>
 </div>
