--- a/SpaceInvaders.Website/index.html
+++ b/SpaceInvaders.Website/index.html
@@ -16,6 +16,10 @@
     <script type="text/javascript" src="packages/signalr/jquery.signalR.js"></script>
     <script type="text/javascript" src="packages/angular/angular.js"></script>
     <script type="text/javascript" src="packages/angular-route/angular-route.js"></script>
+    <script type="text/javascript" src="packages/linq-js/src/linq.js"></script>
+    <script type="text/javascript" src="packages/event-js/dist/eventDispatcher.js"></script>
+    <script type="text/javascript" src="packages/dependency-injection/dist/di-js.js"></script>
+    <script type="text/javascript" src="packages/canvas-render/dist/canvasRender.js"></script>
     <script type="text/javascript" src="src/js/eventmanager.js"></script>
     <script type="text/javascript" src="src/js/connection.js"></script>
     <script type="text/javascript" src="src/js/hubs/diagHub.js"></script>
@@ -23,9 +27,12 @@
     <script type="text/javascript" src="src/js/hubs/chatHub.js"></script>
     <script type="text/javascript" src="src/js/hubs/authHub.js"></script>
     <script type="text/javascript" src="src/js/hub.js"></script>
-    <script type="text/javascript" src="src/js/game.js"></script>
+    <script type="text/javascript" src="src/js/game/models/spaceship.js"></script>
+    <script type="text/javascript" src="src/js/game/stage.js"></script>
 
     <script type="text/javascript" src="src/js/mainCtrl.js"></script>
+    <script type="text/javascript" src="src/js/game/gameService.js"></script>
+    <script type="text/javascript" src="src/js/gameCtrl.js"></script>
     <script type="text/javascript" src="src/js/navigationService.js"></script>
     <script type="text/javascript" src="src/js/routeConfig.js"></script>
     <script type="text/javascript" src="src/js/authService.js"></script>
