--- a/SpaceInvaders.Website/packages/canvas-render/index.html
+++ b/SpaceInvaders.Website/packages/canvas-render/index.html
@@ -11,12 +11,10 @@
     <script type="text/javascript" src="src/packages/stats.js/build/stats.min.js"></script>
     <script type="text/javascript" src="src/packages/linq-js/dist/linq.js"></script>
     <script type="text/javascript" src="src/packages/dependency-injection/dist/di-js.js"></script>
-    <script type="text/javascript" src="src/packages/event-js/dist/eventDispatcher.js"></script>
+    <script type="text/javascript" src="src/packages/event-js/src/js/eventDispatcher.js"></script>
     <script type="text/javascript" src="src/js/lib/StackBlur.js"></script>
-    <script type="text/javascript" src="dist/canvasRender.js"></script>
 
-   <!-- <script type="text/javascript" src="src/js/modules/utility/linkedlist.js"></script>
-    <script type="text/javascript" src="src/js/modules/utility/eventdispatcher.js"></script>
+    <script type="text/javascript" src="src/js/linkedlist.js"></script>
     <script type="text/javascript" src="src/js/modules/utility/general.js"></script>
     <script type="text/javascript" src="src/js/modules/utility/graphics.js"></script>
     <script type="text/javascript" src="src/js/main.js"></script>
@@ -34,12 +32,13 @@
     <script type="text/javascript" src="src/js/modules/shapes/polygon.js"></script>
     <script type="text/javascript" src="src/js/modules/animation.js"></script>
     <script type="text/javascript" src="src/js/modules/game/physics.js"></script>
-    <script type="text/javascript" src="src/js/modules/game/polygonCollision.js"></script>-->
+    <script type="text/javascript" src="src/js/modules/game/polygonCollision.js"></script>
 </head>
 <body>
 <div style="display: inline-block;" id="viewport">
 </div>
 <div style="display: inline-block; vertical-align: top;" id="stats">
+    
     <span>FPS:</span><span id="fps"></span>
 </div>
 <script>
