--- a/SpaceInvaders.Website/index.html
+++ b/SpaceInvaders.Website/index.html
@@ -26,15 +26,15 @@
     <script type="text/javascript" src="src/js/hubs/chatHub.js"></script>
     <script type="text/javascript" src="src/js/hubs/authHub.js"></script>
     <script type="text/javascript" src="src/js/hub.js"></script>
-    <script type="text/javascript" src="src/js/game/models/spaceship.js"></script>
-    <script type="text/javascript" src="src/js/game/stage.js"></script>
+    <script type="text/javascript" src="src/js/services/models/spaceship.js"></script>
+    <script type="text/javascript" src="src/js/services/stage.js"></script>
 
     <script type="text/javascript" src="src/js/mainCtrl.js"></script>
-    <script type="text/javascript" src="src/js/game/gameService.js"></script>
+    <script type="text/javascript" src="src/js/services/gameService.js"></script>
     <script type="text/javascript" src="src/js/gameCtrl.js"></script>
     <script type="text/javascript" src="src/js/navigationService.js"></script>
     <script type="text/javascript" src="src/js/routeConfig.js"></script>
-    <script type="text/javascript" src="src/js/authService.js"></script>
+    <script type="text/javascript" src="src/js/services/authService.js"></script>
     <script type="text/javascript" src="src/features/account/loginCtrl.js"></script>
     <script type="text/javascript" src="src/features/dashboard/dashboardCtrl.js"></script>
     <script type="text/javascript" src="src/features/chat/chatService.js"></script>
