--- a/SpaceInvaders.Website/index.html
+++ b/SpaceInvaders.Website/index.html
@@ -24,13 +24,15 @@
     <script type="text/javascript" src="src/js/hubs/diagHub.js"></script>
     <script type="text/javascript" src="src/js/hubs/gameHub.js"></script>
     <script type="text/javascript" src="src/js/hubs/chatHub.js"></script>
-    <script type="text/javascript" src="src/js/hubs/authHub.js"></script>
-    <script type="text/javascript" src="src/js/hub.js"></script>
-    <script type="text/javascript" src="src/js/services/models/spaceship.js"></script>
+    <script type="text/javascript" src="src/js/hubs/userHub.js"></script>
+    <script type="text/javascript" src="src/js/hubs/hub.js"></script>
+    <script type="text/javascript" src="src/js/models/player.js"></script>
     <script type="text/javascript" src="src/js/services/stage.js"></script>
 
-    <script type="text/javascript" src="src/js/mainCtrl.js"></script>
+    <script type="text/javascript" src="src/js/services/userService.js"></script>
     <script type="text/javascript" src="src/js/services/gameService.js"></script>
+    <script type="text/javascript" src="src/js/register.js"></script>
+    <script type="text/javascript" src="src/js/mainCtrl.js"></script>
     <script type="text/javascript" src="src/js/gameCtrl.js"></script>
     <script type="text/javascript" src="src/js/navigationService.js"></script>
     <script type="text/javascript" src="src/js/routeConfig.js"></script>
